apps/observability-system/alloy/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  labels:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - alloy.internal.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alloy-metrics
          port: 12345
